syntax = "proto3";

package envoy.config.private_key_providers.qat;

import "udpa/annotations/migrate.proto";
import "validate/validate.proto";

option (udpa.annotations.file_migrate).move_to_package = "envoy.extensions.private_key_providers.qat.v3";

message QatPrivateKeyMethodConfig {
  string section_name = 1 [(validate.rules).string.min_bytes = 1];
  string private_key = 2;
  uint32 poll_delay = 3 [(validate.rules).uint32.gte = 1];
}
